--- a/SplashScreen/app/src/main/res/layout/activity_main.xml
+++ b/SplashScreen/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/mainbackground"
     tools:context=".MainActivity">
 
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_weight="1"
         android:layout_margin="50dp"
         app:srcCompat="@drawable/artwork" />
