--- a/SplashScreen/app/src/main/res/layout/activity_main2.xml
+++ b/SplashScreen/app/src/main/res/layout/activity_main2.xml
@@ -5,15 +5,81 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity2">
+    android:background="@drawable/mainbackground"
+    android:orientation="vertical"
+    tools:context=".SignUp">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="500dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-      android:layout_marginTop="160dp"
-        android:textSize="20dp"
+        android:layout_margin="10dp"
+        android:textColor="@color/black"
+        android:textSize="50dp"
         android:textStyle="bold"
-        android:text="Sucessfully understand about Splash Screen"
-         />
+        android:text="Sign Up" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:startIconDrawable="@drawable/name"
+        app:helperText="*Required"
+        app:helperTextTextColor="#FF0000"
+        android:layout_margin="10dp"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/buttoncolor"
+            android:inputType="text"
+            android:paddingStart="48dp"
+            android:hint="Name" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:startIconDrawable="@drawable/name"
+        app:helperText="*Required"
+        android:layout_margin="10dp"
+        app:helperTextTextColor="#FF0000"
+
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/buttoncolor"
+            android:inputType="text"
+            android:paddingStart="48dp"
+            android:hint="E-mail" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:startIconDrawable="@drawable/name"
+        app:helperText="*Required"
+        app:helperTextTextColor="#FF0000"
+        android:layout_margin="10dp"
+        app:endIconMode="password_toggle"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/buttoncolor"
+            android:inputType="text"
+            android:paddingStart="48dp"
+            android:hint="Password" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="200dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:text="Submit" />
+
 </LinearLayout>
