--- a/DatabaseConnectivity/app/src/main/res/layout/activity_sign_in.xml
+++ b/DatabaseConnectivity/app/src/main/res/layout/activity_sign_in.xml
@@ -53,4 +53,23 @@
         android:layout_marginTop="20dp"
         android:layout_height="wrap_content"
         android:text="Submit" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="40dp"
+            android:textSize="15dp"
+            android:layout_marginTop="12.5dp"
+            android:text="If you don't have an account then please, "
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Sign Up"
+            android:id="@+id/SignUp"
+            />
+    </LinearLayout>
 </LinearLayout>
